.happypack/s--1952887931
SyntaxError: Unexpected token (111:140)

[0m [90m 109 | [39m                          [33m<[39m[33mReorder[39m[33m/[39m[33m>[39m
 [90m 110 | [39m                        [33m<[39m[33m/[39m[33mIconButton[39m[33m>[39m
[31m[1m>[22m[39m[90m 111 | [39m                        [33m<[39m[33mIconButton[39m tooltip[33m=[39m[32m"modo grilla"[39m touch[33m=[39m{[36mtrue[39m} tooltipPosition[33m=[39m[32m"bottom-center"[39m onTouchTap[33m=[39m{() [33m=>[39m [36mthis[39m[33m.[39mhandleView([35m2[39m)}}[33m>[39m
 [90m     | [39m                                                                                                                                            [31m[1m^[22m[39m
 [90m 112 | [39m                          [33m<[39m[33mReorder[39m[33m/[39m[33m>[39m
 [90m 113 | [39m                        [33m<[39m[33m/[39m[33mIconButton[39m[33m>[39m
 [90m 114 | [39m                      [33m<[39m[33m/[39m[33mCol[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (111:140)

[0m [90m 109 | [39m                          [33m<[39m[33mReorder[39m[33m/[39m[33m>[39m
 [90m 110 | [39m                        [33m<[39m[33m/[39m[33mIconButton[39m[33m>[39m
[31m[1m>[22m[39m[90m 111 | [39m                        [33m<[39m[33mIconButton[39m tooltip[33m=[39m[32m"modo grilla"[39m touch[33m=[39m{[36mtrue[39m} tooltipPosition[33m=[39m[32m"bottom-center"[39m onTouchTap[33m=[39m{() [33m=>[39m [36mthis[39m[33m.[39mhandleView([35m2[39m)}}[33m>[39m
 [90m     | [39m                                                                                                                                            [31m[1m^[22m[39m
 [90m 112 | [39m                          [33m<[39m[33mReorder[39m[33m/[39m[33m>[39m
 [90m 113 | [39m                        [33m<[39m[33m/[39m[33mIconButton[39m[33m>[39m
 [90m 114 | [39m                      [33m<[39m[33m/[39m[33mCol[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/leo/htdocs/bio/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/bio/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/bio/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/bio/node_modules/loader-runner/lib/LoaderRunner.js:119:14)